# narvar

./: CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: main.c.FD15A6CFB0C1E8BA.idx
src/: main.c
src/widgets/: narvar.c  narvar.h
todo/: todo.md
